# DataEngineering-DataScience-Portfolio

./: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  DataWareHouse.ipynb  Leer Ai Agent.py  MachineLearning 9.2.ipynb  MachineLearning.ipynb  README.md  Script_W9_1.ipynb  SourceDataModel.ipynb  Unsupervised_Learning[AF].ipynb  inventory_levels_train.csv  klassendiagram_opdracht.ipynb  pyproject.toml
AI_Agent/: CrewAI.ipynb
DWH_DUO/: klassendiagram_opdracht.ipynb
DWH_Group/: DataWareHouse.ipynb
Kaggle/: Kaggle_1.ipynb  Kaggle_2.ipynb
Neural_Network/: Neural_Network_1.ipynb  Tensor_1.ipynb  Tensor_Opdr2.ipynb  Tensor_Opdr3.ipynb  Tensor_Opdr5.ipynb
Project/: northwind.sqlite
PyGame_Project/: Game.py  Grid.py  GridGame.ipynb  GridGame.py  GridGameWaardesTest.ipynb  GridTest.ipynb
Python_Introduction/: DEDS_WC_1.1a_Opdrachten.ipynb
SuperVised, Unsupervised L_ng/: MachineLearning 9.1.ipynb  Script_W10_1.ipynb  Script_W9_2.ipynb  Unsupervised_Learning[AF].ipynb
