[project]
name = "DEDS_portfolio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gihaagse", email = "gihaagse@gmail.com"},
]
dependencies = ["pandas>=2.1.0,<2.2.0", "ipykernel>=6.29.5", "pyodbc>=5.2.0", "scikit-learn>=1.6.1", "matplotlib>=3.10.1", "seaborn>=0.13.2", "tensorflow==2.13.0", "numpy>=1.22,<1.25"]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true